# CallsAnaliser

./: .seg.txt  .tmp_mass.txt  .tmp_ui_analyze_block.txt  LICENSE  README.md  app.py  check_timestamp.py  debug_parse.py  pyproject.toml  requirements (6).txt  requirements.txt  run_app.ps1  simple_debug.py
calls_analyser/: __init__.py  config.py
calls_analyser/adapters/: __init__.py
calls_analyser/adapters/ai/: __init__.py  gemini.py
calls_analyser/adapters/secrets/: env.py
calls_analyser/adapters/storage/: local.py
calls_analyser/adapters/telephony/: __init__.py  vochi.py
calls_analyser/api/: __init__.py  http.py
calls_analyser/domain/: exceptions.py  models.py
calls_analyser/ports/: __init__.py  ai.py  secrets.py  storage.py  telephony.py
calls_analyser/services/: analysis.py  call_log.py  prompt.py  registry.py  tenant.py
tests/: test_analysis_service.py  test_app_batch.py  test_call_log_service.py  test_local_storage_adapter.py  test_prompt_service.py  test_tenant_service.py  test_ui_utils.py  test_vochi_adapter.py
